# trading-py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  startup.sh
config/: default.yaml
data/: opt_results.json  optimization_results.json
examples/: analyze_1m_recent.py  analyze_data.py  backtest_1m.py  backtest_1m_v2.py  backtest_5m.py  backtest_5m_v2.py  live_trading.py  multi_tf_analysis.py  optimize.py  run_backtest.py
src/: config.py  models.py
src/backtest/: engine.py
src/data/: loader.py
src/metrics/: calculator.py
src/risk/: manager.py
src/strategies/: base.py  breakout_5m.py  ema_crossover_atr.py  ema_crossover_v2.py  mean_rev_15m.py  momentum_scalp_5m.py  registry.py  vol_scalp_1m.py  volatility_breakout_1m.py
src/visualization/: plotter.py
